# Edu_Omni_MyMind

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.label-studio  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.agents/skills/grill-with-docs/: ADR-FORMAT.md
.github/workflows/: ci.yml
.github/workflows/ISSUE_TEMPLATE/: feature_request.md
configs/: default_config.yaml
docs/: mkdocs.yml
docs/docs/: index.md
edumind/: __init__.py  app.py  config.py
edumind/api/: __init__.py  dependencies.py  main.py
edumind/api/routers/: __init__.py  asr.py  health.py  pipeline.py  rag.py  translation.py
edumind/config/: __init__.py  settings.py  teencode_map.json
edumind/core/: __init__.py  container.py  exceptions.py  logging.py
edumind/models/: __init__.py  api.py  chunks.py  transcription.py  translation.py
edumind/modules/: __init__.py  rag_engine.py  speech_processor.py  vietmix_translator.py
edumind/services/: __init__.py
edumind/services/embedding/: __init__.py  base.py  colpali.py  mock.py  openai_like.py  sentence_transformer.py
edumind/services/graphstore/: __init__.py  base.py  mock.py  neo4j.py
edumind/services/llm/: __init__.py  base.py  gemini.py  openai_like.py  template.py
edumind/services/translation/: __init__.py  api.py  base.py  huggingface.py  rule_based.py
edumind/services/vectorstore/: __init__.py  base.py  qdrant.py
edumind/utils/: __init__.py  benchmark.py  data_manager.py  retry.py  rotator.py  text.py
label_studio_backend/: __init__.py  _wsgi.py  model.py  setup_env.sh
nlp_model_training/: __init__.py  config.py  dataset.py  train.py
nlp_model_training/data/: __init__.py  dataset.py  preprocess.py
nlp_model_training/models/: __init__.py  architectures.py  registry.py
nlp_model_training/training/: __init__.py  metrics.py  trainer.py
nlp_model_training/utils/: __init__.py  helpers.py
notebooks/finetune/: 01_vietmix_llm_lora_finetune.ipynb  02_vietmix_embedding_lora_finetune.ipynb
scripts/: build_multitask_corpus.py  build_qa_corpus.py  build_vietmix_corpus.py
src/: __init__.py  app.py  config.py  debugger_check.py
src/modules/: __init__.py  rag_engine.py  speech_processor.py  vietmix_translator.py
tests/: __init__.py  test_data.py  test_models.py
