[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "edumind"
version = "1.0.0"
description = "EduMIND — All-in-One Multimodal Lecture Assistant for Bilingual Education"
authors = [
  { name = "HCMUS_Underdogs" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    # === Core / Existing ===
    "loguru",
    "mkdocs",
    "pip",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
    "torch",
    "torchvision",
    "transformers",
    "pyyaml",
    "pydantic>=2.0.0",
    "pydantic-settings",
    # === EduMIND: Streamlit Dashboard ===
    "streamlit>=1.30.0",
    # === EduMIND: ASR Pipeline ===
    "openai-whisper>=20231117",
    "soundfile>=0.12.0",
    # === EduMIND: RAG Pipeline ===
    "sentence-transformers>=2.2.0",
    "qdrant-client>=1.7.0",
    "pypdf>=4.0.0",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 100
src = ["edumind"]
include = ["pyproject.toml", "edumind/**/*.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort imports
    "N",   # pep8-naming
    "UP",  # pyupgrade (modernize syntax)
    "PL",  # pylint checks for code smell & refactoring suggestions
]
ignore = [
    "PLR2004",  # ignore magic constants rule (often used in deep learning)
    "PLR0913",  # ignore too many arguments rule (standard in PyTorch trainers)
    "E501",     # ignore line too long rule (standard for logging & raw config keys)
]

[tool.ruff.lint.isort]
known-first-party = ["edumind"]
force-sort-within-sections = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

