[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "edumind"
version = "2.0.0"
description = "EduMIND — All-in-One Multimodal Lecture Assistant for Bilingual Education"
authors = [
  { name = "HCMUS_Underdogs" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    # === Core Infrastructure ===
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv",
    "structlog>=24.0.0",
    "tenacity>=8.0.0",
    "cachetools>=5.0.0",
    # === ML / Torch ===
    "torch",
    "torchvision",
    "transformers",
    # === EduMIND: Streamlit Dashboard ===
    "streamlit>=1.30.0",
    # === EduMIND: ASR Pipeline ===
    "openai-whisper>=20231117",
    "soundfile>=0.12.0",
    # === EduMIND: RAG Pipeline ===
    "sentence-transformers>=2.2.0",
    "qdrant-client>=1.7.0",
    "docling>=2.0.0",
    # === EduMIND: LLM Provider (optional) ===
    "google-generativeai>=0.5.0",
    "openai>=1.0.0",
    # === EduMIND: Graph Database (Knowledge Graph) ===
    "neo4j>=5.0.0",
]
requires-python = "~=3.10.0"

[project.optional-dependencies]
label-studio = [
    "label-studio-ml>=1.0.9,<2.0.0",
    "redis",
    "rq",
]
colpali = [
    "colpali-engine>=0.3.0",
    "pdf2image>=1.16.0",
]



[tool.ruff]
line-length = 100
src = ["edumind"]
include = ["pyproject.toml", "edumind/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort imports
    "N",   # pep8-naming
    "UP",  # pyupgrade (modernize syntax)
    "PL",  # pylint checks for code smell & refactoring suggestions
]
ignore = [
    "PLR2004",  # ignore magic constants rule (often used in deep learning)
    "PLR0913",  # ignore too many arguments rule (standard in PyTorch trainers)
    "E501",     # ignore line too long rule (standard for logging & raw config keys)
]

[tool.ruff.lint.isort]
known-first-party = ["edumind"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "pre-commit>=3.0.0",
]


